--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "toy-robot-simulation"
-version = "0.1.0"
+version = "1.0.0"
 
 [project.scripts]
 toy_robot_simulation = "toy_robot_simulation.main:main"
@@ -16,3 +16,9 @@ packages = ["src/toy_robot_simulation"]
 addopts = [
     "--import-mode=importlib",
 ]
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
