--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/psf/black
-    rev: stable
+    rev: 24.3.0
     hooks:
     - id: black
 -   repo: https://github.com/PyCQA/isort
@@ -11,3 +11,8 @@ repos:
     rev: 7.0.0
     hooks:
     - id: flake8
+      args: ["--max-line-length", "100"]
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.9.0
+    hooks:
+    -   id: mypy
